<resources>
    <string name="app_name">Club Robotique Menzel temime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Home">Home</string>
    <string name="events">Events</string>
    <string name="Photos">Photos</string>
    <string name="Videos">Videos</string>
    <string name="Messenger">Messenger</string>
    <string name="Local">Local</string>
    <string name="Logout">Logout</string>

    <string name="string1">Club Robotique Menzel Temime</string>
    <string name="string2"></string>
</resources>
