<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/db"
        android:title="@string/Home"
        android:icon="@drawable/ic_home_black_24dp"/>
    <item
        android:id="@+id/photos"
        android:title="@string/Photos"
        android:icon="@drawable/ic_photo_black_24dp"/>
    <item
        android:id="@+id/videos"
        android:title="@string/Videos"
        android:icon="@drawable/ic_video_library_black_24dp"/>
    <item
        android:id="@+id/Events"
        android:title="@string/events"
        android:icon="@drawable/ic_event_black_24dp"/>
    <item
        android:id="@+id/messenger"
        android:title="@string/Messenger"
        android:icon="@drawable/ic_chat_bubble_black_24dp"/>
    <item
        android:id="@+id/Local"
        android:title="@string/Local"
        android:icon="@drawable/ic_add_location_black_24dp"/>

    <item
        android:id="@+id/Logout"
        android:title="@string/Logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"/>
</menu>
